fix favs page for firefox
- content in the list had too much of a left padding (looked different and worse than Chrome)

--- a/prototype/style.css
+++ b/prototype/style.css
@@ -251,6 +251,7 @@ html, body, body > div {
     .favourites ul {
         list-style: none;
         -webkit-padding-start: 0px;
+        padding-left: 0; /* override firefox default */
     }
 
         .favourites li {
